# prime-jennie

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  GUIDE.md  Makefile  README.md  alembic.ini  docker-compose.no-gpu.yml  docker-compose.yml  pyproject.toml
.ai/: DONE.md  OPS.md  RULES.md  TODO.md
.ai/diagnostics/: sector-leader-capture-diagnosis-2026-02-21.md
.ai/reports/: data-mining-signal-discovery-2026-03-11.md  gap-up-rebound-analysis-2026-03-12.md  intraday-risk-throttle-phase1.md  overextension-filter-implementation-2026-03-11.md  overextension-grid-search-2026-03-11.md  rsi-rebound-review-2026-03-11.md
.ai/reviews/: market_condition_filter_review_response.md
.ai/sessions/: session-2026-02-19-14-00.md  session-2026-02-19-18-10.md  session-2026-02-19-19-30.md  session-2026-02-19-23-00.md  session-2026-02-20-01-00.md  session-2026-02-20-10-00.md  session-2026-02-21-sector-leader-capture.md  session-2026-02-22-exit-rules-v2-cost-optimization.md  session-2026-02-22-news-pipeline-job-worker.md  session-2026-02-22-scout-scoring-fix.md  session-2026-02-25-12-06.md  (+54 more)
.github/: PULL_REQUEST_TEMPLATE.md
dags/: airflow_utils.py  macro_dag.py  price_monitor_dag.py  scout_job_dag.py  utility_jobs_dag.py
docs/: exit-rules-improvement-report.md
experiments/: SUMMARY.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
migrations/: env.py
scripts/: airflow-entrypoint.sh  analyze_gap_up.py  analyze_us_kospi_correlation.py  backfill_macro_flows.py  backtest_overextension.py  cleanup_old_data.py  collect_foreign_holding.py  collect_investor_trading.py  daily_asset_snapshot.py  fix_trade_logs_profit.py  grid_search_overextension.py  grid_search_sw_fine.py  install.sh  migrate_from_legacy.py  mine_signals.py  poc_concurrency_test.py  poc_vllm_throughput.py  reanalyze_sentiment.py  reanalyze_standalone.py  run_backtest.py  seed_stock_masters.py  setup_dev.sh  setup_dev_views.sql  sweep_rsi_threshold.py  sync_positions.py  systemd_autostart.sh  update_naver_sectors.py  update_stock_master.py
(+226 files in other folders)
