[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prime-jennie"
version = "1.0.0"
description = "AI-powered Korean stock trading system"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "youngs75", email = "youngs75.kim@gmail.com" },
]

dependencies = [
    # Core
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.1,<3",
    "sqlmodel>=0.0.16",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30",
    "redis>=5.0,<6",
    "httpx>=0.27,<1",
    # Database
    "sqlalchemy>=2.0,<3",
    "pymysql>=1.1",
    "cryptography>=42",
    "alembic>=1.13",
    # LLM
    "openai>=1.30",
    "anthropic>=0.34",
    "google-generativeai>=0.7",
    # Data
    "pandas>=2.2,<3",
    "numpy>=1.26,<2",
    "pykrx>=1.0",
    # Observability
    "structlog>=24.1",
    # Vector DB
    "qdrant-client>=1.9",
    "langchain-openai>=0.1",
    # Gateway
    "pybreaker>=1.0",
    "slowapi>=0.1.9",
    "websocket-client>=1.7",
    # Crawlers
    "beautifulsoup4>=4.12",
    # Utilities
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.98",
    "mypy>=1.10",
    "ruff>=0.4",
]
airflow = [
    "apache-airflow>=2.8",
    "apache-airflow-providers-http>=5.0",
    "mysqlclient>=2.2",
    "aiomysql>=0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["prime_jennie"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, no external deps)",
    "contract: Contract tests (model validation)",
    "integration: Integration tests (DB, Redis required)",
    "e2e: End-to-end tests (all services required)",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["B008", "UP046"]
